--- a/NuageAlarms/app/src/main/res/layout/activity_login.xml
+++ b/NuageAlarms/app/src/main/res/layout/activity_login.xml
@@ -13,25 +13,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-            <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_username"
-                    android:id="@+id/imageView2"
-                    app:layout_constraintEnd_toStartOf="@+id/userNameInput"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                    app:layout_constraintTop_toTopOf="@+id/userNameInput"
-                    app:layout_constraintBottom_toBottomOf="@+id/userNameInput"
-                    app:layout_constraintHorizontal_bias="1.0"
-            />
             <TextView
-                    android:text="@string/username"
+                    android:text="@string/app_name"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/userName" android:textSize="24sp"
+                    android:layout_height="43dp"
+                    android:id="@+id/mainTitle" android:textSize="30sp"
                     android:textColor="@color/colorText"
-                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/companyNameInput"/>
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"
+                    app:layout_constraintTop_toTopOf="parent"
+            />
             <ImageView
                     android:layout_width="278dp"
                     android:layout_height="192dp" app:srcCompat="@drawable/nuage_v_colour_rgb_large"
@@ -49,6 +41,46 @@
                     android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/imageView4"/>
+            <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_company"
+                    android:id="@+id/imageView"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toStartOf="@+id/companyNameInput"
+                    app:layout_constraintTop_toTopOf="@+id/companyNameInput"
+                    app:layout_constraintBottom_toBottomOf="@+id/companyNameInput"
+                    app:layout_constraintHorizontal_bias="1.0"
+            />
+            <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:ems="10"
+                    android:id="@+id/companyNameInput"
+                    android:hint="@string/companyname_hint"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/companyName"/>
+            <TextView
+                    android:text="@string/username"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/userName" android:textSize="24sp"
+                    android:textColor="@color/colorText"
+                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/companyNameInput"/>
+            <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_username"
+                    android:id="@+id/imageView2"
+                    app:layout_constraintEnd_toStartOf="@+id/userNameInput"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                    app:layout_constraintTop_toTopOf="@+id/userNameInput"
+                    app:layout_constraintBottom_toBottomOf="@+id/userNameInput"
+                    app:layout_constraintHorizontal_bias="1.0"
+            />
             <EditText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -73,27 +105,6 @@
                     android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/userNameInput"/>
             <ImageView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_company"
-                    android:id="@+id/imageView"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                    app:layout_constraintEnd_toStartOf="@+id/companyNameInput"
-                    app:layout_constraintTop_toTopOf="@+id/companyNameInput"
-                    app:layout_constraintBottom_toBottomOf="@+id/companyNameInput"
-                    app:layout_constraintHorizontal_bias="1.0"
-            />
-            <Button
-                    android:text="@string/button_enter"
-                    android:layout_width="wrap_content"
-                    android:layout_height="37dp"
-                    android:id="@+id/enterButton"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp"
-                    style="@style/Widget.AppCompat.Button.Colored" android:background="@color/colorButton"
-                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/rememberMeCheck"
-                    android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"/>
-            <ImageView
-                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content" app:srcCompat="@drawable/ic_password"
                     android:id="@+id/imageView3"
                     app:layout_constraintEnd_toStartOf="@+id/passWordInput"
@@ -102,35 +113,13 @@
                     app:layout_constraintBottom_toBottomOf="@+id/passWordInput"
                     app:layout_constraintHorizontal_bias="1.0"
             />
-            <TextView
-                    android:text="@string/app_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="43dp"
-                    android:id="@+id/mainTitle" android:textSize="30sp"
-                    android:textColor="@color/colorText"
-                    android:layout_marginStart="8dp"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"
-                    app:layout_constraintTop_toTopOf="parent"
-            />
-            <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:inputType="textPersonName"
-                    android:ems="10"
-                    android:id="@+id/companyNameInput"
-                    android:hint="@string/companyname_hint"
-                    android:layout_marginStart="8dp"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/companyName"/>
             <EditText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
                     android:ems="10"
                     android:id="@+id/passWordInput"
-                    android:text="JZnMqIhDSlnlHYXH"
+                    android:text="5CyXBuDFa2yHckzI"
                     android:layout_marginStart="8dp"
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -142,7 +131,18 @@
                     android:id="@+id/rememberMeCheck" android:layout_marginTop="24dp"
                     app:layout_constraintTop_toBottomOf="@+id/passWordInput" app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp"/>
+                    android:layout_marginStart="8dp" android:checked="true"/>
+            <Button
+                    android:text="@string/button_enter"
+                    android:layout_width="wrap_content"
+                    android:layout_height="37dp"
+                    android:id="@+id/enterButton"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp"
+                    style="@style/Widget.AppCompat.Button.Colored" android:background="@color/colorButton"
+                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/rememberMeCheck"
+                    android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"/>
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
