--- a/NuageAlarms/app/src/main/res/layout/activity_alarm_list.xml
+++ b/NuageAlarms/app/src/main/res/layout/activity_alarm_list.xml
@@ -220,7 +220,7 @@
                     android:layout_marginTop="8dp"
                     app:layout_constraintTop_toBottomOf="@+id/allAlarms" app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:id="@+id/alarmRecyclerView" android:layout_marginStart="8dp"
+                    android:id="@+id/notificationRecyclerView" android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp" android:background="@drawable/alarm_list_background"/>
             <Button
                     android:text="@string/button_search"
@@ -228,11 +228,12 @@
                     android:layout_width="81dp"
                     android:layout_height="38dp"
                     android:id="@+id/searchButton" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/alarmRecyclerView" android:background="@color/colorButton"
+                    app:layout_constraintTop_toBottomOf="@+id/notificationRecyclerView"
+                    android:background="@color/colorButton"
                     android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-                    style="@style/Widget.AppCompat.Button.Colored" android:layout_marginBottom="32dp"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    style="@style/Widget.AppCompat.Button.Colored"
+                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
