--- a/NuageAlarms/app/src/main/res/layout/activity_main.xml
+++ b/NuageAlarms/app/src/main/res/layout/activity_main.xml
@@ -14,15 +14,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-            <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_port"
-                    android:id="@+id/imageView8"
-                    app:layout_constraintTop_toTopOf="@+id/serverPortInput"
-                    app:layout_constraintBottom_toBottomOf="@+id/serverPortInput"
-                    app:layout_constraintEnd_toStartOf="@+id/serverPortInput"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                    app:layout_constraintHorizontal_bias="1.0"/>
             <TextView
                     android:text="@string/app_name"
                     android:layout_width="wrap_content"
@@ -33,27 +24,13 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
             />
-            <Button
-                    android:text="@string/button_enter"
-                    android:layout_height="38dp"
-                    android:id="@+id/enterButton"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp"
-                    style="@style/Widget.AppCompat.Button.Colored" android:background="@color/colorButton"
-                    android:textSize="14sp"
-                    app:layout_constraintTop_toBottomOf="@+id/rememberServerCheck"
-                    android:layout_width="81dp" android:layout_marginTop="8dp" android:layout_marginBottom="32dp"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
-            <TextView
-                    android:text="@string/server_port"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/serverPort" android:textSize="24sp"
-                    android:textColor="@color/colorText" android:layout_marginStart="8dp"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/serverNameIpInput"/>
+            <ImageView
+                    android:layout_width="278dp"
+                    android:layout_height="192dp" app:srcCompat="@drawable/nuage_v_colour_rgb_large"
+                    android:id="@+id/nuageImageView"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/mainTitle"/>
             <TextView
                     android:text="@string/server_name_ip"
                     android:layout_width="wrap_content"
@@ -63,7 +40,17 @@
                     android:layout_marginStart="8dp"
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/imageView12"/>
+                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/nuageImageView"/>
+            <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_server"
+                    android:id="@+id/serverImageView"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toStartOf="@+id/serverNameIpInput"
+                    app:layout_constraintTop_toTopOf="@+id/serverNameIpInput"
+                    app:layout_constraintBottom_toBottomOf="@+id/serverNameIpInput"
+                    app:layout_constraintHorizontal_bias="1.0"
+            />
             <EditText
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
@@ -75,23 +62,24 @@
                     android:hint="@string/name_ip_input"
                     android:textStyle="italic"
                     app:layout_constraintTop_toBottomOf="@+id/serverNameIp"/>
+            <TextView
+                    android:text="@string/server_port"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/serverPort" android:textSize="24sp"
+                    android:textColor="@color/colorText" android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/serverNameIpInput"/>
             <ImageView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_server"
-                    android:id="@+id/imageView7"
+                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_port"
+                    android:id="@+id/portImageView"
+                    app:layout_constraintTop_toTopOf="@+id/serverPortInput"
+                    app:layout_constraintBottom_toBottomOf="@+id/serverPortInput"
+                    app:layout_constraintEnd_toStartOf="@+id/serverPortInput"
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                    app:layout_constraintEnd_toStartOf="@+id/serverNameIpInput"
-                    app:layout_constraintTop_toTopOf="@+id/serverNameIpInput"
-                    app:layout_constraintBottom_toBottomOf="@+id/serverNameIpInput"
-                    app:layout_constraintHorizontal_bias="1.0"
-            />
-            <ImageView
-                    android:layout_width="278dp"
-                    android:layout_height="192dp" app:srcCompat="@drawable/nuage_v_colour_rgb_large"
-                    android:id="@+id/imageView12"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/mainTitle"/>
+                    app:layout_constraintHorizontal_bias="1.0"/>
             <EditText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -109,7 +97,19 @@
                     android:id="@+id/rememberServerCheck" android:layout_marginTop="24dp"
                     app:layout_constraintTop_toBottomOf="@+id/serverPortInput"
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:checked="true"/>
+            <Button
+                    android:text="@string/button_enter"
+                    android:layout_height="38dp"
+                    android:id="@+id/enterButton"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp"
+                    style="@style/Widget.AppCompat.Button.Colored" android:background="@color/colorButton"
+                    android:textSize="14sp"
+                    app:layout_constraintTop_toBottomOf="@+id/rememberServerCheck"
+                    android:layout_width="81dp" android:layout_marginTop="8dp" android:layout_marginBottom="32dp"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
