--- a/NuageAlarms/app/src/main/res/layout/layout_alarm.xml
+++ b/NuageAlarms/app/src/main/res/layout/layout_alarm.xml
@@ -5,14 +5,20 @@
                                              android:layout_height="wrap_content">
 
     <ImageView
-            android:layout_width="54dp"
-            android:layout_height="48dp" app:srcCompat="@drawable/ic_warning"
+            android:layout_width="26dp"
+            android:layout_height="26dp" app:srcCompat="@drawable/ic_warning"
             android:id="@+id/warningImage"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+    />
+    <ImageButton
+            android:layout_width="26dp"
+            android:layout_height="26dp" app:srcCompat="@drawable/ic_false"
+            android:id="@+id/acknowledgedImageButton" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/warningImage" android:backgroundTint="@color/colorBackground"
             app:layout_constraintBottom_toBottomOf="parent"/>
     <TextView
             android:text="@string/alarm_origin"
-            android:textSize="14sp"
+            android:textSize="12sp"
             android:textColor="@color/colorCommonText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -27,18 +33,19 @@
             android:layout_height="wrap_content"
             android:id="@+id/originTextView" app:layout_constraintStart_toEndOf="@+id/originTitleTextView"
             android:layout_marginStart="4dp"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/originTitleTextView"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="4dp"/>
+            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"
+            android:textSize="12sp"/>
     <TextView
             android:text="@string/alarm_reason"
-            android:textSize="14sp"
+            android:textSize="12sp"
             android:textColor="@color/colorCommonText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/reasonTitleTextView" app:layout_constraintStart_toEndOf="@+id/warningImage"
             android:layout_marginStart="4dp"
-            app:layout_constraintTop_toBottomOf="@+id/originTitleTextView" android:layout_marginBottom="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/originTextView" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
             android:layout_marginTop="4dp"/>
     <TextView
@@ -48,9 +55,9 @@
             android:layout_height="wrap_content"
             android:id="@+id/reasonTextView" app:layout_constraintStart_toEndOf="@+id/reasonTitleTextView"
             android:layout_marginStart="4dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintTop_toBottomOf="@+id/originTextView" android:layout_marginTop="4dp"
-            android:layout_marginBottom="8dp"/>
+            android:textSize="12sp"
+            app:layout_constraintTop_toTopOf="@+id/reasonTitleTextView" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
 </android.support.constraint.ConstraintLayout>
