--- a/NuageAlarms/app/src/main/res/layout/activity_alarm_list.xml
+++ b/NuageAlarms/app/src/main/res/layout/activity_alarm_list.xml
@@ -22,7 +22,8 @@
                     android:tint="#000000"
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-                    android:scaleType="fitCenter"/>
+                    android:scaleType="fitCenter"
+            />
 
             <Button
                     android:layout_width="113dp"
@@ -66,7 +67,6 @@
                     android:layout_width="0dp"
                     android:layout_height="56dp"
                     android:drawableEnd="@drawable/ic_dropdown_arrow"
-                    android:text="@string/filters"
                     android:textColor="@color/colorDropDownText"
                     android:textAlignment="textStart"
                     android:textSize="18sp"
@@ -75,7 +75,7 @@
                     android:layout_marginTop="8dp"
                     app:layout_constraintTop_toTopOf="parent" android:backgroundTint="@color/colorDropDownFilters"
                     app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toStartOf="@+id/labelDropDown"
-                    android:layout_marginEnd="4dp"/>
+                    android:layout_marginEnd="4dp" android:text="@string/filters"/>
 
             <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
